--- a/styles/style.css
+++ b/styles/style.css
@@ -7,18 +7,26 @@ body {
 	display: flex;
 	width: 100vw;
 	height: 100vh;
+  background-color: gray;
 }
 
 #left {
 	background-image: url("/plant.jpg");
 	background-size: cover;
-  color: white;
+	color: white;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+  flex: 25% 1 1;
 }
 
 #logo {
 	background-color: rgba(0, 0, 0, 0.49);
-  font-family: "Norse-Bold", Courier;
-  font-size: 100px;
+	font-family: "Norse-Bold", Courier;
+	font-size: 100px;
+	margin-top: 100px;
+	display: flex;
+	justify-content: center;
 }
 
 #logo img {
@@ -27,6 +35,55 @@ body {
 
 #left a:visited, #left a:link {
 	color: white;
+}
+
+#right {
+	background-color: #f0f0f0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+  flex: 60% 1 1;
+}
+
+#right p {
+	padding-left: 20px;
+	padding-right: 50px;
+}
+
+.form-banner {
+	background-color: white;
+  box-shadow: 0px 5px 1px gray;
+	padding: 30px;
+}
+
+.form-grid {
+	display: grid;
+	grid: auto-flow / 1fr 1fr;
+}
+
+.input-field {
+	display: flex;
+	flex-direction: column;
+}
+
+.input-field input {
+	border-color: #E5E7EB;
+	border-style: solid;
+	border-radius: 0.3rem;
+	border-width: 1px;
+	padding: 3px;
+}
+
+input:focus-visible{
+  outline: none;
+}
+
+input:focus{
+	border-color: blue;
+}
+
+input:invalid{
+  border-color: red;
 }
 
 input:invalid + p {
@@ -39,3 +96,12 @@ input:valid + p {
 	height: 0;
 }
 
+input[type="submit"] {
+	background-color: #596D48;
+	color: white;
+}
+
+#right a:visited, #right a:link {
+	text-decoration-line: none;
+	color: #596D48;
+}
