--- a/styles/style.css
+++ b/styles/style.css
@@ -5,26 +5,30 @@
 
 body {
 	display: flex;
-	width: 100vw;
-	height: 100vh;
-  background-color: gray;
+	height: max(100vh, 600px);
+	background-color: gray;
+	font-family: sans-serif;
+	justify-content: center;
+	margin: auto;
 }
 
 #left {
-	background-image: url("/plant.jpg");
+	background-image: url("../plant.jpg");
 	background-size: cover;
 	color: white;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-  flex: 25% 1 1;
+	min-width: 350px;
+	max-width: 500px;
+	flex: auto;
 }
 
 #logo {
 	background-color: rgba(0, 0, 0, 0.49);
 	font-family: "Norse-Bold", Courier;
 	font-size: 100px;
-	margin-top: 100px;
+	margin-top: calc(60px + 10vh + 2vw);
 	display: flex;
 	justify-content: center;
 }
@@ -33,7 +37,11 @@ body {
 	height: 100px;
 }
 
-#left a:visited, #left a:link {
+.footer-text {
+	text-align: center;
+}
+
+.footer-text a:visited, .footer-text a:link {
 	color: white;
 }
 
@@ -42,28 +50,43 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-  flex: 60% 1 1;
+	min-width: 600px;
+	max-width: 50em;
+	flex: auto;
 }
 
-#right p {
-	padding-left: 20px;
+.blurb {
+	font-size: 20px;
+  padding-left: 20px;
 	padding-right: 50px;
+}
+
+.login {
+  padding-left: 20px;
 }
 
 .form-banner {
 	background-color: white;
-  box-shadow: 0px 5px 1px gray;
-	padding: 30px;
+	box-shadow: 0px 4px 1px #dfdfdf;
+	padding: 10px 30px 30px 30px;
 }
 
 .form-grid {
 	display: grid;
-	grid: auto-flow / 1fr 1fr;
+	grid: auto-flow / 18em 18em;
+	grid-gap: 20px 40px;
 }
 
 .input-field {
 	display: flex;
 	flex-direction: column;
+}
+
+.input-field label {
+	text-transform: uppercase;
+	font-weight: bold;
+	font-size: 10px;
+	letter-spacing: 0.2em;
 }
 
 .input-field input {
@@ -72,6 +95,7 @@ body {
 	border-radius: 0.3rem;
 	border-width: 1px;
 	padding: 3px;
+	max-width: 15rem;
 }
 
 input:focus-visible{
@@ -86,19 +110,24 @@ input:invalid{
   border-color: red;
 }
 
-input:invalid + p {
-	color: red;
+.form-error {
+  color: red;
+  margin: 0;
+  font-size: 10px;
 }
 
-input:valid + p {
+input:valid + .form-error {
 	visibility: collapse;
-	margin: 0;
-	height: 0;
 }
 
 input[type="submit"] {
 	background-color: #596D48;
 	color: white;
+	margin: 20px 0 0 20px;
+	padding: 10px 50px;
+	border: none;
+	border-radius: 8px;
+	font-weight: bold;
 }
 
 #right a:visited, #right a:link {
